--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,15 +1,15 @@
-# ????
+# 开发环境
 
-# ???
+# 数据源
 quarkus.datasource.db-kind=h2
 quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus
 quarkus.datasource.username=root
 quarkus.datasource.password=123456
-# ?? SQL ????
+# 打印SQL执行日志
 quarkus.hibernate-orm.log.sql=true
-# ??????????????
+# 程序启动时自动创建数据库结构
 quarkus.hibernate-orm.database.generation=drop-and-create
 
-# ??
+# 日志
 quarkus.log.level=DEBUG
 quarkus.log.file.enable=false
